--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - pip install -r requirements.txt
 
 script:
-  - pytest
+  - coverage run --source=vr900connector setup.py pytest
 after_success:
   - coveralls
 
